Add : Welcome Page

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -35,6 +35,7 @@
     <li>HTTP 요청 기본
         <ul>
             <li><a href="/headers">기본, 헤더 조회</a></li>
+            <li><a href="/multimap/user/강민정님?basket=치킨&basket=피자">MultiValueMap 조회</a></li>
         </ul>
     </li>
     <li>HTTP 요청 파라미터
